[package]
name = "ip-monitor"
version = "0.1.0"
authors = ["The sensorlog Authors <oss@nyantec.com>"]
edition = "2018"
license = "MirOS"

[dependencies]
pnet = { version = "0.27", features = [ "serde" ] }
custom_error = "1.8"
getopts = "0.2"
env_logger = "0.8"
log = "0.4"
serde = { version = "1.0", features = [ "derive" ] }
serde_yaml = "0.8"
afpacket = "0.1"
async-std = { version = "1.9", features = [ "attributes" ] }
futures = "0.3"
